--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^5.16.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
   }
 }
