--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^5.16.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1"
   }
